# feng_bi_copilot_2025

./: LICENSE  README.md
.devcontainer/: devcontainer.json
feng_copilot_2025_0.1/: LLM-OpenAI.igor.ipynb
feng_copilot_2025_0.2/: functions.py  main.py
feng_copilot_2025_0.3/: instructions.py  main.py  pyproject.toml
feng_copilot_2025_0.4/: functions.py
